--- a/css/indexStyles.css
+++ b/css/indexStyles.css
@@ -3,16 +3,17 @@ body {
     margin: 0 auto;
 }
 
-header, footer {
+header,
+footer {
     background-color: #312e8f;
     border-radius: 7px;
 }
 
-header img {
+#portrait {
     float: right;
     max-width: 165px;
-    margin-top: -90px;
-    margin-right: 15px;
+    margin-top: 10px;
+    margin-right: 10px;
     border-radius: 7px;
     filter: drop-shadow(3px 2px 4px black)
 }
@@ -34,7 +35,8 @@ h2 {
     padding-bottom: 5px;
 }
 
-.dates, #copyright {
+.dates,
+#copyright {
     color: white;
     text-align: center;
 }
@@ -56,6 +58,7 @@ nav {
 #copyright a {
     color: white;
 }
+
 #copyright a:hover {
     color: lightgrey;
 }
@@ -64,11 +67,27 @@ nav {
     color: #ffd145;
 }
 
-#currentDate, #lastUpdated {
+#currentDate,
+#lastUpdated {
     color: #ffd145;
 }
 
 .dates {
     font-family: monospace;
     font-size: 1.13em;
+}
+
+@media screen and (max-width: 560px) {
+    #portrait {
+        float: none;
+        margin-left: 10px;
+    }
+
+    body {
+        max-width: 480px;
+    }
+
+    h1 {
+        padding-left: 150px;
+    }
 }
