--- a/css/indexStyles.css
+++ b/css/indexStyles.css
@@ -15,23 +15,27 @@ footer {
     margin-top: 10px;
     margin-right: 10px;
     border-radius: 7px;
-    filter: drop-shadow(3px 2px 4px black)
+    filter: drop-shadow(3px 2px 4px grey);
+}
+
+#portrait:hover {
+    filter: drop-shadow(3px 2px 4px black);
 }
 
 h1 {
     color: #ffd145;
-    margin-left: -155px;
     text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     font-family: sans-serif;
-    font-size: 36pt;
-    filter: drop-shadow(3px 2px 4px black)
+    font-size: 40pt;
+    filter: drop-shadow(3px 2px 4px black);
 }
 
 h2 {
     font-family: sans-serif;
-    border-bottom: 2px solid grey;
+    margin-right: 10px;
+    border-bottom: 5px solid gray;
     padding-bottom: 5px;
 }
 
