updated h1 and footer CSS for mobile viewing

--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,15 @@ nav {
     }
 
     h1 {
-        padding-left: 150px;
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+
+    #separate {
+        display: none;
+    }
+
+    footer span {
+        display: block;
     }
 }
