--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /* Fonts from Google Fonts - more at https://fonts.google.com */
-@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Inconsolata:wght@500&family=Open+Sans:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Inknut+Antiqua:wght@800&family=Open+Sans&display=swap');
 
 body {
     max-width: 760px;
@@ -30,7 +30,7 @@ h1 {
     text-align: center;
     padding-top: 20px;
     padding-bottom: 20px;
-    font-family: 'Cinzel', serif;
+    font-family: 'Inknut Antiqua', serif;
     font-size: 40pt;
     filter: drop-shadow(3px 2px 4px black);
     
