--- a/lesson2/css/medium.css
+++ b/lesson2/css/medium.css
@@ -5,4 +5,8 @@
         grid-template-columns: 1fr 1fr;
         grid-gap: 1.25rem;
     }
+
+    header, footer {
+        border-radius: 15px;
+    }
 }
