--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -46,18 +46,22 @@ img.persona {
     margin-top: 30px;
 }
 
+img.color-scheme {
+    max-width: 350px;
+}
+
 ul.audience {
     margin-bottom: 40px;
 }
 
 header h1, header h2 {
-    color: #fff914;
+    color: #FFF700;
     text-align: center;
     filter: drop-shadow(3px 2px 4px black);
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: #f25f5c;
+    color: #AF110E;
     font-family: 'Montserrat Alternates', sans-serif;
 }
 
@@ -82,7 +86,7 @@ nav {
     margin: 15px;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
-    background-color: #247ba0;
+    background-color: #195671;
     text-align: center;
 }
 
@@ -95,7 +99,7 @@ nav ul {
 
 nav ul li a {
     display: block;
-    color: #ffc600;
+    color: #FFF700;
     font-family: 'Montserrat', sans-serif;
     font-size: .9em;
 	padding: 0.75rem;
@@ -103,12 +107,16 @@ nav ul li a {
 }
 
 nav a:hover {
-    background-color: #ffc600;
-    color: #247ba0;
+    background-color: #FFF700;
+    color: #195671;
 }
 
-.active, .active:hover {
+.active {
 	color: white;
+}
+
+.active:hover {
+    color: #50514f;
 }
 
 footer {
@@ -131,12 +139,12 @@ footer {
 }
 
 #copyright a:active {
-    color: #ffe066;
+    color: #FFF700;
 }
 
 .dates {
     font-size: 12pt;
-    color: #ffc600;
+    color: #FFF700;
 }
 
 footer span {
