--- a/lesson4/css/medium.css
+++ b/lesson4/css/medium.css
@@ -1,4 +1,29 @@
-@media only screen and (min-width: 37.5em) {
+@media only screen and (min-width: 35em) {
+
+    header {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+    }
+
+    .main-logo {
+        margin: 1em;
+        width: 9em;
+        justify-self: center;
+    }
+
+    .title-motto {
+        justify-self: center;
+        align-self: center;
+        margin-right: 3em;
+    }
+
+    header h1 {
+        font-size: 2.9em;
+    }
+
+    .motto {
+        font-size: 1.1em;
+    }
 
     .navigation {
         display: flex;
