--- a/lesson4/css/medium.css
+++ b/lesson4/css/medium.css
@@ -8,13 +8,14 @@
     .main-logo {
         margin: 1em;
         width: 9em;
-        justify-self: center;
+        justify-self: end;
+        align-self: center;
     }
 
     .title-motto {
-        justify-self: center;
+        justify-self: start;
         align-self: center;
-        margin-right: 3em;
+        margin-left: 1em;
     }
 
     header h1 {
@@ -37,7 +38,7 @@
 
     .navigation a {
         text-align: center;
-        font-size: 1em;
+        font-size: .825em;
         padding: 1em;
     }
     
