--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -1,12 +1,9 @@
-body {
-    max-width: 960px;
-    margin: 10px auto;
-}
-
 main {
     font-family: 'Montserrat', sans-serif;
     color: #50514f;
     padding: 15px;
+    max-width: 960px;
+    margin: 10px auto;
 }
 
 header {
@@ -22,6 +19,7 @@ header {
 
 .motto {
     font-family: 'Montserrat', sans-serif;
+    font-style: italic;
 }
 
 .logo {
