--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -61,17 +61,17 @@
     .forecast-div {
         display: grid;
         grid-template-columns: repeat(5, 1fr);
-        grid-gap: 1em;
+        grid-gap: 2%;
         padding: 0;
         width: 80%;
-        margin: 0 auto;
+        margin: 1.5em auto;
         text-align: center;
     }
 
     .forecast-title {
         grid-column: 1/6;
         text-align: center;
-        margin: 1em 0 0 0;
+        margin: 1em 0 .6em 0;
     }
 
     .forecast-div img {
@@ -95,8 +95,16 @@
     }
 
     .forecast-div > div {
-        border: 1px solid black;
         box-shadow: 0 0 10px black;
+        border-radius: 5px;
+        overflow: hidden;
+    }
+
+    .article-img {
+        float: right;
+        width: 45%;
+        margin: 0 0 .5em 1em;
+        border-radius: 5px;
     }
     
     footer span {
