h3 to h2, link to stormcenter.html on thanks.html

--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -50,9 +50,7 @@ h1 {
 }
 
 h2 {
-    margin: 50px 0 0 0;
-    text-align: center;
-    font-size: 2.1em;
+    margin: 4em 0 2em 3%;
 }
 
 h3 {
@@ -113,7 +111,7 @@ nav {
 
 
 /* ------------ THANKS ------------ */
-h3.thanks {
+h2.thanks {
     text-align: center;
     margin-left: 0;
     margin-bottom: 0;
