--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -50,7 +50,8 @@ h1 {
 }
 
 h2 {
-    margin: 4em 0 2em 3%;
+    margin: 3em 0 1em 3%;
+    font-size: 1.75em;
 }
 
 h3 {
@@ -128,17 +129,24 @@ form {
     max-width: 60em;
     margin: 0 auto;
 }
+
 form fieldset {
     margin: 2em 0;
-    border: 2px solid #50514f;
+    border: 4px solid #50514f;
     border-radius: 7px;
     padding: .5em 2%;
+    background-color: #f9f9f9;
+}
+
+form fieldset:hover {
+    background-color: white;
+    border: 4px double #50514f;
 }
 
 form legend {
     color: #50514f;
-    margin: 0 1rem;
-    padding: 0 .5rem;
+    margin: 0 1em;
+    padding: 0 .5em;
 }
 
 form label.top, form div {
@@ -150,19 +158,19 @@ form label.top, form div {
 
 form label.top input, form label.top select, form textarea {
     display: block;
-    font-size: 1rem;
+    font-size: 1em;
     border: solid 1px #50514f;
     border-radius: 4px;
-    padding: .75rem;
+    padding: .75em;
     color: #50514f;
     width: 100%;
-    max-width: 20rem;
+    max-width: 20em;
     background-color: rgba(0,0,0,.05);
 }
 
 form label.sbs {
     display: block;
-    padding: .75rem 0;
+    padding: .75em 0;
     color: #555;
 }
 
@@ -170,19 +178,24 @@ form input.submit {
     border: none;
     background-color: #AF110E;
     color: white;
-    border-radius: 1rem;
-    padding: .75rem 1.5rem;
-    margin: 0 0 2rem 2%;
-    width: 96%;
-    max-width: 20rem;
+    border-radius: 12px;
+    padding: 1em 1.25em;
+    margin: 0 0 2em 2%;
+    width: 80%;
+    max-width: 20em;
+}
+
+form input.submit:hover {
+    box-shadow: 2px 2px 10px #50514f;
+    font-weight: bold;
 }
 
 form label.top input:required {
-    border-left: red solid 6px;
+    border-left: red solid 4px;
 }
 
 form label.top input:required:valid {
-    border-left: green solid 6px;
+    border-left: green solid 4px;
 }
 
 #storm-index {
