--- a/lesson9/css/large.css
+++ b/lesson9/css/large.css
@@ -22,6 +22,7 @@
         display: grid;
         grid-gap: 1em;
         grid-template-columns: repeat(3, 1fr);
+        margin: 2.5em 0 2em 0;
     }
 
     div.town-info section:first-child {
@@ -35,12 +36,17 @@
     div.town-info section {
         display: initial;
         max-width: 300px;
-        margin: 0;
         justify-self: center;
     }
 
     div.town-info section p.town-motto {
         font-size: .8em;
+    }
+
+    .clearfix::after {
+        content: "";
+        display: table;
+        clear: both;
     }
 
     footer {
