added shadows to town-img's in small and medium

--- a/lesson9/css/medium.css
+++ b/lesson9/css/medium.css
@@ -85,6 +85,10 @@
         align-self: center;
     }
 
+    div.town-info section img.town-img {
+        margin: 0;
+    }
+
     div.town-info section h3 {
         align-self: end;
         margin: 0;
