--- a/lesson11/css/home-css/large.css
+++ b/lesson11/css/home-css/large.css
@@ -63,8 +63,7 @@
     /* END OF TOWN INFO STYLING */
 
     footer {
-        border-radius: 15px;
-        max-width: 960px;
+        border-radius: 0 0 15px 15px;
     }
 
     .clearfix::after {
