--- a/lesson11/css/home-css/small.css
+++ b/lesson11/css/home-css/small.css
@@ -2,7 +2,7 @@ main {
     font-family: 'Montserrat', sans-serif;
     color: #50514f;
     max-width: 960px;
-    margin: 10px auto;
+    margin: 10px auto 0 auto;
 }
 
 #announcment {
@@ -170,7 +170,6 @@ article {
 .contact-div {
     padding: 2.5em;
     background-color: #195671;
-    border: 2px solid #AF110E;
 }
 
 .contact-map{
@@ -193,8 +192,8 @@ article {
 footer {
     background-color: #50514f;
     text-align: center;
-    padding: 25px;
-    margin: 1em auto;
+    padding: 25px 0;
+    margin: 0 auto 1em auto;
     font-size: 1.1rem;
     font-family: 'Inconsolata', monospace;
     color: white;
