town-motto bottom-margin adjusted on home page

--- a/lesson11/css/large.css
+++ b/lesson11/css/large.css
@@ -61,6 +61,7 @@
 
     div.town-info section p.town-motto {
         font-size: .8em;
+        margin-bottom: 1.5em;
     }
 
     div.town-info section img.town-img {
