--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -118,7 +118,7 @@ nav {
 /* THERE WAS SOME STYLING HERE FOR H2, H3 FOR GALLERY ???????? CHECK IT!!!!!!! */
 
 h2 {
-    margin-top: 2.5em;
+    margin-top: 1em;
     text-align: center;
 }
 
@@ -131,7 +131,7 @@ h2 {
 
 /* HOME PAGE TOWN DATA STYLING */
 div.town-info section {
-    border: 2px solid #195671;
+    border: 5px inset #195671;
     text-align: center;
     background-color: #FFF70010;
     margin: 1em auto;
@@ -146,7 +146,7 @@ div.town-info section h3 {
 
 div.town-info section img.town-img {
     margin: 0 0 1em 0;
-    box-shadow: 0 0 5px 3px #195671;
+    box-shadow: 0 0 5px 3px #50514f;
 }
 
 div.town-info section p {
@@ -175,7 +175,7 @@ div.town-info section p.town-motto {
     grid-gap: .75em;
     color: #AF110E;
     font-weight: bold;
-    box-shadow: 0 0 10px black;
+    border: 5px inset #195671;
     padding: .5em;
     line-height: 1.5em;
 }
@@ -216,8 +216,8 @@ section.events {
     text-align: center;
     margin: 0 auto;
     padding: 1em 0;
-    border: 5px solid #195671;
-    max-width: 500px;
+    border: 5px inset #195671;
+    max-width: 41em;
 }
 
 section.events li {
@@ -254,6 +254,7 @@ article {
     line-height: 1.25em;
     padding: 2.5em;
     margin: 1.5em auto;
+    border: 5px inset #FFF700;
 }
 
 /* THERE WAS SOME DIFFERENCE HERE FOR TOWN PAGES ???????? CHECK IT!!!!!!! */
@@ -299,10 +300,9 @@ form {
 
 form fieldset {
     margin: 2em 0;
-    border: 4px solid #50514f;
+    border: 5px inset #50514f;
     border-radius: 7px;
     padding: .5em 2%;
-    background-color: #f9f9f9;
 }
 
 form legend {
@@ -404,7 +404,7 @@ footer {
     background-color: #50514f;
     text-align: center;
     padding: 25px 0;
-    margin: 0 auto 1em auto;
+    margin: 0 auto .5em auto;
     font-size: 1.1rem;
     font-family: 'Inconsolata', monospace;
     color: white;
