fixed error where event li's weren't part of a ul

--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -220,6 +220,10 @@ div.events {
     max-width: 41em;
 }
 
+div.events ul {
+    padding: 0;
+}
+
 div.events li {
     padding: .25em;
     font-weight: bold;
