--- a/scoots4fun/css/small.css
+++ b/scoots4fun/css/small.css
@@ -357,8 +357,8 @@ form fieldset:hover {
 }
 
 form legend {
-    color: #FFB938;
-    text-shadow: 1px 1px 1px #040F16;
+    color: #3481ED;
+    font-weight: bold;
     font-size: 1.15em;
     margin: 0 1em;
     padding: 0 .5em;
