--- a/scoots4fun/css/medium.css
+++ b/scoots4fun/css/medium.css
@@ -48,17 +48,14 @@
     }
 
     .rental-summary > div:nth-of-type(1) {
-        border: 5px ridge #040F16;
         margin-right: .67em;
     }
 
     .rental-summary > div:nth-of-type(2) {
-        border: 5px ridge #040F16;
         margin: 0 .33em;
     }
 
     .rental-summary > div:nth-of-type(3) {
-        border: 5px ridge #040F16;   
         margin-left: .67em;     
     }
 
@@ -91,7 +88,6 @@
 
     .map {
         display: block;
-        border: 5px solid #040F16;
         padding-top: 1em;
         margin-right: .5em;
     }
@@ -104,6 +100,13 @@
     .contact-info {
         margin-left: .5em;
         height: 224px;
+    }
+
+    .rental-summary > div:nth-of-type(1),
+    .rental-summary > div:nth-of-type(2),
+    .rental-summary > div:nth-of-type(3),
+    .map {
+        border: 1px solid #040F16;
     }
 
     /* ------------------------------- RENTALS PAGE CSS ------------------------------- */
