changed font family for attributions.html

--- a/scoots4fun/css/small.css
+++ b/scoots4fun/css/small.css
@@ -1,3 +1,7 @@
+#attributions {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 /* ------------------------------- HOME PAGE & COMMON STYLING CSS ------------------------------- */
 .clearfix::after {
     content: "";
