formatted attributions.html h2's

--- a/scoots4fun/css/small.css
+++ b/scoots4fun/css/small.css
@@ -2,6 +2,10 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+#attributions h2 {
+    text-align: left;
+}
+
 /* ------------------------------- HOME PAGE & COMMON STYLING CSS ------------------------------- */
 .clearfix::after {
     content: "";
