--- a/scoots4fun/css/large.css
+++ b/scoots4fun/css/large.css
@@ -89,6 +89,23 @@
         height: 300px;
         min-width:97.5%;
     }
+
+    div.form-flex {
+        display: flex;
+        flex-direction: row;
+    }
+
+    div.form-flex fieldset {
+        flex: 1 1 auto;
+    }
+
+    div.form-flex fieldset:nth-of-type(1) {
+        margin-right: .5em;
+    }
+
+    div.form-flex fieldset:nth-of-type(2) {
+        margin-left: .5em;
+    }
     
     /* ------------------------------- CONTACT PAGE CSS ------------------------------- */
     .contact-map {
